--- a/android/.gitignore
+++ b/android/.gitignore
@@ -5,6 +5,11 @@ gradle-wrapper.jar
 /gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
+.dart_tool/
+.idea/
+.vscode/
+assets/songs
+
 
 # Remember to never publicly share your keystore.
 # See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
