--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -24,7 +24,10 @@ Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
-
+.dart_tool/
+.idea/
+.vscode/
+assets/songs
 # Exceptions to above rules.
 !default.mode1v3
 !default.mode2v3
