--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ assets/songs
 .pub-cache/
 .pub/
 /build/
+.dart_tool/
+.idea/
+.vscode/
+assets/songs
 
 # Web related
 lib/generated_plugin_registrant.dart
