--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.0
   flutter_icons: ^1.1.0
   page_transition: "^1.1.7+6"
@@ -19,6 +21,7 @@ dependencies:
   provider: ^5.0.0
   fluttertoast: ^8.0.7
   firebase_core: ^1.4.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +33,4 @@ flutter:
   assets:
     - assets/images/
     - assets/songs/
+    - lib/lang/
