--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,3 +68,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
 }
+
+rootProject.ext {
+  set('FlutterFire', [
+    FirebaseSDKVersion: '25.12.0'
+  ])
+}
