--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,15 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_icons: ^1.1.0
   page_transition: "^1.1.7+6"
-  audioplayers: ^0.19.1
+  audioplayers: 0.19.1
   flappy_search_bar: 1.4.1
-  firebase_auth: ^2.0.0
-  cloud_firestore: ^2.3.0
-  provider: ^5.0.0
-  fluttertoast: ^8.0.7
-  firebase_core: ^1.4.0
-  shared_preferences: ^2.0.6
+  firebase_auth: 2.0.0
+  cloud_firestore: 2.3.0
+  provider: 5.0.0
+  fluttertoast: 8.0.7
+  firebase_core: 1.4.0
+  shared_preferences: 2.0.6
+  
 
 dev_dependencies:
   flutter_test:
