--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_core: 1.4.0
   shared_preferences: ^2.0.6
   fullscreen: ^1.0.3
+  animated_splash_screen: ^1.0.1+2
   
   
   
