--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,11 +12,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  flutter_spinkit: "^4.1.2"
-  flutter_icons: ^1.1.0
-  page_transition: "^1.1.7+6"
+  page_transition: "^2.0.2"
   audioplayers: ^0.19.1
-  flappy_search_bar: 1.4.1
   firebase_auth: 3.0.1
   cloud_firestore: 2.4.0
   provider: 5.0.0
@@ -24,9 +21,10 @@ dependencies:
   firebase_core: 1.4.0
   shared_preferences: ^2.0.6
   fullscreen: ^1.0.3
-  animated_splash_screen: ^1.0.1+2
-  
-  
+  image_picker: ^0.8.4
+  chopper: ^4.0.1
+  build_runner: ^2.1.2
+  chopper_generator: ^4.0.1
   
 
 dev_dependencies:
