--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,17 @@ dependencies:
   chopper: ^4.0.1
   build_runner: ^2.1.2
   chopper_generator: ^4.0.1
+  flutter_slidable: ^0.6.0
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.5
   
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
